[package]
name = "salvo-http3"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/salvo-http3"
repository = "https://github.com/salvo-rs/salvo-http3"
readme = "README.md"
description = "Http3 for salvo web framework"
keywords = ["http3", "quic", "webtransport"]
categories = ["network-programming", "web-programming"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
quinn = ["dep:h3-quinn"]

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false }
h3 = {version = "0.0.7", features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"]}
h3-datagram = { version = "0.0.1" }
h3-quinn = { version = "0.0.9", features = ["datagram"], optional = true}
http = "1"
pin-project-lite = { version = "0.2", default-features = false }
tracing = "0.1.41"
tokio = { version = "1.44.1", default-features = false }